# nanoblas

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Makefile  annotated.html  avx__kernel_8h_source.html  avx__kernel__f32_8c_source.html  boundary.c  boundary.h  cblas_8h_source.html  cblas__enum_8h_source.html  classes.html  config.h  const.h  dir_1dab47e1343cf7dcc7e6d5cea2d42fe5.html  dir_3756d50f4003bc63fa3fe49460f9c79d.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_cbd7f246bdf7dc0a50281a272327e6ed.html  dir_d22b6165f4d21ba0a1a2b820bc5f6184.html  dir_d88a28db1ee62b546118bac13b2566c2.html  dir_df586488cef81fd412c802a7c42e7787.html  files.html  formula.repository  gemm.c  gemm.h  gemm_8c.html  gemm_8c_source.html  generic__kernel_8c_source.html  generic__kernel_8h_source.html  generic__kernel__4x4_8c_source.html  generic__kernel__6x4_8c_source.html  globals.html  globals_func.html  group__GEMM.html  group__INTERNAL.html  group__L3BLAS.html  group__MACRO.html  group__NANOBLAS.html  index.html  (+42 more)
bench/: CMakeLists.txt  bench.hpp  bench_mkl.cpp  bench_nanoblas.cpp  bench_openblas.cpp
cmake/: detect_arch.cmake  detect_builtin_prefetch.c  detect_x86_64.c
kernel/: CMakeLists.txt  boundary.c  boundary.h  generic_kernel.c  generic_kernel.h  kernel.h
kernel/other/: CMakeLists.txt  decision.c
kernel/x86_64/: CMakeLists.txt  avx_kernel.h  avx_kernel_f32.c  avx_kernel_f32.s  avx_kernel_f64.s  cpuid.c  decision.c  kernel.c  pack.c
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  classes_0.js  classes_1.js  files_0.js  files_1.js  functions_0.js  functions_1.js  groups_0.js  groups_1.js  groups_2.js  groups_3.js  searchdata.js
src/: CMakeLists.txt  cblas.h  cblas_enum.h  const.h  gemm.c  gemm.h  iter.h  kernel.h  nanoblas.h  nanoblas.hpp  nanoblas_kernel.h  nanoblas_kernel.hpp  nanoblas_prepack.h  nanoblas_prepack.hpp  nanoblas_types.h  nanoblas_types.hpp  sched.c  sched.h  util.h
src/internal/: CMakeLists.txt  config.h  iter.h  iter_fxx.c  kernel.h  macro.h  nanoblas_fxx.c  prepack.c  prepack.h  sched.c  sched.h  util.h
src/internal/config/other/: CMakeLists.txt  config_f32.c  config_f64.c
src/internal/config/x86_64/: CMakeLists.txt  config_f32.c  config_f64.c  cpuid.h
src/kernel/: CMakeLists.txt  generic_kernel.c  generic_kernel.h  generic_kernel.hpp  generic_kernel_4.c  generic_kernel_4x4.c  generic_kernel_6x4.c  generic_kernel_8.c
src/kernel/other/: CMakeLists.txt  decision.c
src/kernel/x86_64/: CMakeLists.txt  avx_kernel.c  avx_kernel.h  avx_kernel.hpp  avx_kernel_4x16_f32.s  avx_kernel_f32.c  avx_kernel_f32.s  avx_kernel_fxx.c  cpuid.h  decision.c  decision_f32.c  decision_f64.c
src/param/: CMakeLists.txt
src/param/other/: param_fxx.c
src/param/x86_64/: CMakeLists.txt  param_fxx.c
test/: CMakeLists.txt  gemm.cpp  gemm.hpp  gemm_f32.c  start_sched.c  step_sched.c  test_gemm.cpp  test_gemm.hpp  test_kernel.cpp  test_kernel.hpp  test_kernel_mult.cpp  test_kernel_mult.hpp  test_kernel_pack.cpp  test_kernel_pack.hpp
test/internal/: CMakeLists.txt
test/internal/prepack/: CMakeLists.txt  fixture.h  pack_all.c  start_prepack.c  step_prepack.c
test/internal/sched/: pack_all.c  start_sched.c  step_sched.c
test/kernel/: CMakeLists.txt  generic_kernel_mult.c  generic_kernel_pack.c
test/lib/: reference_kernel.hpp  util.hpp
test/sched/: CMakeLists.txt  fixture.h  pack_all.c  start_sched.c  step_sched.c
