function(my_add_test test_name)
	add_executable(${test_name} ${ARGN})
	add_test(NAME ${test_name} COMMAND ${test_name})

	target_link_libraries(${test_name} nanoblas)
	target_include_directories(${test_name} PRIVATE ${PROJECT_SOURCE_DIR}/src)
	target_include_directories(${test_name} PRIVATE ${PROJECT_SOURCE_DIR}/test)
	set_target_properties(${test_name} PROPERTIES CXX_STANDARD 11)
	set_target_properties(${test_name} PROPERTIES CXX_STANDARD_REQUIRED ON)
	if(${CMAKE_C_COMPILER_ID} MATCHES "GNU|Clang")
		target_compile_options(${test_name} PRIVATE $<$<COMPILE_LANGUAGE:CXX>:-O3 -Werror -Wall -Wextra -Wpedantic>)
	endif()
endfunction()

my_add_test(gemm ${CMAKE_CURRENT_SOURCE_DIR}/gemm.cpp)
#add_subdirectory(kernel)
