function(my_add_test test_name)
	add_executable(${test_name} ${ARGN})
	add_test(NAME ${test_name} COMMAND ${test_name})
	misc_target_setup(${test_name})
	target_link_libraries(${test_name} nanoblas)
	target_include_directories(${test_name} PRIVATE ${PROJECT_SOURCE_DIR}/test)
endfunction()

my_add_test(test_gemm ${CMAKE_CURRENT_SOURCE_DIR}/test_gemm.cpp)
my_add_test(test_mult ${CMAKE_CURRENT_SOURCE_DIR}/test_kernel_mult.cpp)
my_add_test(test_pack ${CMAKE_CURRENT_SOURCE_DIR}/test_kernel_pack.cpp)
